feat(docs): add Code of Conduct, Contributing guidelines, and Security policy
Introduce a Code of Conduct to foster a welcoming community, a CONTRIBUTING.md file to guide contributions, and a SECURITY.md document outlining vulnerability reporting procedures. Update README.md to reference these new documents, enhancing project documentation and community standards.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Scope check
         run: deno task scope-check
+
+      - name: Audit dependencies
+        run: deno audit
